# production-rag-knowledge-assistant

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  PROJECT.md  README.md  SECURITY.md  compose.yaml  pyproject.toml
.cursor/rules/: 00-repository-architecture.mdc  01-python-standards.mdc  02-mcp-and-retrieval-architecture.mdc  03-testing-standards.mdc  04-development-workflow.mdc  05-documentation-standards.mdc  06-git-standards.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
data/evaluation/: retrieval_benchmark_v1.json
docs/: ARCHITECTURE.md  DECISIONS.md  PROGRESS.md
docs/audit/: repository-audit-plan-21-followup.md  repository-audit.md
docs/examples/: README.md  incident_response_procedure_excerpt.md  remote_work_policy_excerpt.md  security_policy_faq_excerpt.md
docs/plans/active/: 01-project-bootstrap.md  21-audit-portfolio-polish.md  README.md
docs/plans/backlog/: README.md  ROADMAP.md  chat-validation-and-acceptance-testing.md
docs/plans/completed/: 01-project-bootstrap.md  02-python-bootstrap.md  03-domain-models.md  04-storage-layer.md  05-indexing-pipeline.md  06-dense-retrieval.md  07-sparse-retrieval.md  08-fusion-retrieval.md  09-reranking.md  10-knowledge-mcp-server.md  11-llm-boundary.md  12-langgraph-agent.md  13-evaluation-framework.md  14-synthetic-knowledge-base.md  15-demo-bootstrap-workflow.md  16-real-dense-embeddings-integration.md  17-real-reranker.md  18-retrieval-strategy-evaluation.md  19-interactive-chat-demo.md  20-real-sparse-embeddings-integration.md  README.md
src/knowledge_assistant/: __init__.py
src/knowledge_assistant/agent/: __init__.py  config.py  exceptions.py  graph.py  prompts.py  state.py  streaming.py  tools.py  turn.py  wiring.py
src/knowledge_assistant/bootstrap/: __init__.py  chat.py  config.py  environment.py  retrievers.py
src/knowledge_assistant/cli/: chat.py  demo.py  evaluate.py  main.py
src/knowledge_assistant/core/: __init__.py  chunk.py  document.py  identifiers.py  indexing.py  retrieval.py  source.py
src/knowledge_assistant/embeddings/: __init__.py  config.py  exceptions.py  factory.py  runtime.py  sparse_conversion.py
src/knowledge_assistant/evaluation/: __init__.py  dataset.py  exceptions.py  metrics.py  report.py  runner.py  settings.py
src/knowledge_assistant/indexing/: __init__.py  config.py  documents.py  embeddings.py  exceptions.py  ids.py  llamaindex_adapter.py  pipeline.py
src/knowledge_assistant/llm/: __init__.py  config.py  exceptions.py  messages.py  openai_client.py  protocol.py  streaming_stub_client.py  stub_client.py
src/knowledge_assistant/mcp_server/: __init__.py  config.py  exceptions.py  formatting.py  resources.py  schemas.py  server.py  tools.py
tests/smoke/: test_package_import.py
tests/unit/: import_ast.py
tools/knowledge_generator/: corpus_templates_base.py  generator.py  prose_builders.py  rendering.py  schemas.py
(+167 files in other folders)
