[project]
name = "knowledge-assistant"
version = "0.1.0"
description = "Educational production-style RAG knowledge assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "basedpyright>=1.29.0",
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_assistant"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "N",
    "SIM",
    "UP",
]

[tool.ruff.format]
quote-style = "double"

[tool.basedpyright]
include = ["src/knowledge_assistant", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
extraPaths = ["src"]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
