[project]
name = "knowledge-assistant"
version = "0.1.0"
description = "Educational production-style RAG knowledge assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "FlagEmbedding>=1.2.0",
    "httpx>=0.28",
    "langgraph>=1.2.6",
    "llama-index-core>=0.12",
    "llama-index-readers-file>=0.4",
    "pydantic>=2.0",
    "qdrant-client>=1.12",
    "torch>=2.12.1",
    # FlagEmbedding 1.4.0 reranker tokenization calls tokenizer.prepare_for_model,
    # which transformers 5.x removed from slow tokenizers.
    "transformers>=4.44,<5",
]

[project.scripts]
rag = "knowledge_assistant.cli.main:main"

[dependency-groups]
dev = [
    "basedpyright>=1.29.0",
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.uv]
default-groups = ["dev"]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_assistant"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "N",
    "SIM",
    "UP",
]

[tool.ruff.format]
quote-style = "double"

[tool.basedpyright]
include = ["src/knowledge_assistant", "tests", "tools/knowledge_generator"]
exclude = [".local", ".venv"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
extraPaths = ["src", "tools/knowledge_generator"]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests/unit"]
markers = [
    "embedding_model: requires BAAI/bge-m3 download and significant runtime",
    "real_model: tests that load local model runtimes and are skipped by default",
]
